# resevanje-amazonskega-pragozda-linux

./: CMakeLists.txt
src/: drevo.cpp  igralec.cpp  leaderboard.cpp  main.cpp  ogenj.cpp  sdl2-game.code-workspace  seznamSovraznikov.cpp  sovraznik.cpp  staroselec.cpp  verigaOgnjev.cpp  zemljevidDreves.cpp
src/include/: drevo.hpp  igralec.hpp  leaderboard.hpp  ogenj.hpp  seznamSovraznikov.hpp  sovraznik.hpp  staroselec.hpp  verigaOgnjev.hpp  vse.hpp  zemljevidDreves.hpp
